[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[project]
name = "ctxcore"
version = "0.4.0"
description = "Core functions for pycisTarget and the SCENIC tool suite"
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.12,<3.14"
license = { text = "GNU General Public License v3" }
authors = [
  { name = "Bram Van de Sande" },
  { name = "Gert Hulselmans", email = "gert.hulselmans@kuleuven.be" },
]
maintainers = [
  { name = "Gert Hulselmans", email = "gert.hulselmans@kuleuven.be" },
]
keywords = ["ctxcore", "cisTarget", "pycisTarget", "SCENIC", "pySCENIC", "pycisTopic", "scenicplus"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "cytoolz>=1.1.0",
  "diptest>=0.11.0",
  "frozendict>=2.4.7",
  "numba>=0.65.1",
  "numpy>=2.0,<2.5 ",
  "pandas>=2.0,<3.0",
  "pyarrow>=24.0.0",
  "pyyaml",
  "scipy>=1.17.1",
  "scikit-learn>=1.8.0",
  "tqdm>=4.67.3",
]

[project.urls]
Homepage = "https://github.com/aertslab/ctxcore"
Documentation = "https://ctxcore.readthedocs.io/"
Repository = "https://github.com/aertslab/ctxcore"
Changelog = "https://github.com/aertslab/ctxcore/blob/main/CHANGELOG.rst"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "nox>=2026.4.10",
    "pandas-stubs>=3.0.0.260204",
    "polars>=1.40.1",
    "pytest>=9.0.3",
]
docs = [
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
]
